Fix font size on small screens

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -297,7 +297,7 @@ table.inventory-table>tbody>tr>td:first-child>div {
 
 @media (max-width : 700px) {
     table.inventory-table {
-        font-size: .5vi;
+        font-size: 7pt;
     }
 }
 
